--- a/src/main/java/com/mycompany/presupuestoferias/views/LoginView.form
+++ b/src/main/java/com/mycompany/presupuestoferias/views/LoginView.form
@@ -254,7 +254,7 @@
             <Component class="javax.swing.JLabel" name="lblCaptchaGenerator">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Dialog" size="24" style="0"/>
+                  <Font name="Century" size="24" style="0"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
